# fastapi-deployment-pipeline

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  .yamllint.yml  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  SECURITY.md  docker-compose.override.yml  docker-compose.yml  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml  release-drafter.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release.yml  security.yml
app/: __init__.py  main.py
app/api/: __init__.py  health.py  metrics.py
app/api/v1/: __init__.py  items.py
app/core/: __init__.py  config.py  logging.py
app/middleware/: __init__.py  request_id.py
app/services/: __init__.py  cache.py
docs/: runbook.md
docs/architecture/: 001-fastapi-choice.md
load_tests/: README.md  locustfile.py
monitoring/grafana/dashboards/: api-dashboard.json
monitoring/grafana/provisioning/dashboards/: dashboard.yml
monitoring/grafana/provisioning/datasources/: prometheus.yml
monitoring/prometheus/: prometheus.yml
scripts/: bump-version.sh
tests/: __init__.py  conftest.py  test_health.py  test_items.py  test_metrics.py
